# esp32c3_examples

./: Cargo.toml  flake.nix  wokwi.toml
.cargo/: config.toml
ble/: Cargo.toml
ble/.cargo/: config.toml
ble/bleps/bleps/src/: acl.rs  attribute.rs  attribute_server.rs  event.rs  l2cap.rs  lib.rs
ble/src/: lib.rs  main.rs
